--- a/modelisation.Rmd
+++ b/modelisation.Rmd
@@ -1,30 +1,59 @@
-# cd C:\Nico\Github\Memoire\ArchiSimple\src\archisimple93
-
+---
+title: "Modélisation mémoire"
+author: "Degives Nicolas"
+date: "2023"
+output:
+  html_document:
+    code_folding: show
+    collapsed: yes
+    fig_caption: yes
+    fig_height: 5
+    fig_width: 6
+    highlight: tango
+    number_sections: yes
+    smart: no
+    theme: united
+    toc: yes
+    toc_depth: 3
+    toc_float: yes
+  pdf_document:
+    toc: yes
+    toc_depth: '2'
+    number_sections: yes
+editor_options:
+  chunk_output_type: console
+---
+  
+```{r setup, include=FALSE}
 rm(list = ls())
 library(tidyverse)
 library(data.table)
 setwd("C:/Nico/Github/Memoire")
 source("ArchiSimple/src/io_archisimple.R")
+```
 
+# Sorgho
 
-# Les six variétés de Sorgho ---------------------------------------------------
+## Choix des valeurs de paramètres
 
+Importe le fichier 'base_parameter.xml' ainsi qu'un dataframe avec les valeurs qui doivent être modifiées.
 
-
-# Lecture du fichier de paramètre...............................................
-
+```{r, echo=TRUE}
+# Import des paramètres de base
 params <- read_archisimple_xml("base_parameter.xml")
 
-# Insérer les différents paramètres à modifier dans le batch....................
-
+# Insérer les différents paramètres à modifier dans le batch
 par <- data.frame(
-  dmin=c(      0.1567  ,0.1567  ,0.1567   ,0.1567  ,0.1567  ,0.1297),
-  RDM = c(     0.1874  ,0.2022  ,0.228    ,0.17545 ,0.1745  ,0.1611),
-  exportName=c('Amiggo','Biggben','Hyperion','Juno','Swingg','Vegga')
+    exportName=c('Amiggo','Biggben','Hyperion','Juno','Swingg','Vegga'),
+    dmin=c(      0.1567  ,0.1567  ,0.1567   ,0.1567  ,0.1567  ,0.1297),
+    RDM = c(     0.1874  ,0.2022  ,0.228    ,0.17545 ,0.1745  ,0.1611),
+    exportType=rep(1,6)
   )
+```
 
-# for loop pour faire le tour de tous les paramètres............................
+## Run le modèle
 
+```{r, echo=TRUE}
 sims <- NULL
 setwd("ArchiSimple/src/archisimple93/")
 inc <-0
@@ -44,22 +73,28 @@ for (variety in c('Amiggo','Biggben','Hyperion','Juno','Swingg','Vegga')) {
   
   # Run ArchiSimple
   system("./archisimple")
-  
-  # Récupère l'output du modèle qui est écrit en txt
-  rs <- fread("myroot.txt", header = T) %>% 
-    mutate(sim_length = params$sim_length) %>%
-    mutate(sim = as.factor(variety))
-  
-  # Stock la simulation dans sims
-  sims <- rbind(sims, rs)
 }
 setwd("../../../") 
+```
 
+## Résultats de la modélisation
 
-# Observe..........................................................................
+### ExportType = 1 , .txt
 
-## Plot
-###En fonction du diamètre
+```{r, echo=TRUE}
+setwd("ArchiSimple/src/archisimple93/")
+sims <- NULL
+for (variety in c('Amiggo','Biggben','Hyperion','Juno','Swingg','Vegga')) {
+  rs <- fread(paste0(variety,'.txt')) %>%
+    mutate(sim = variety)
+  sims <- rbind(sims,rs)
+}
+setwd("../../../") 
+```
+
+#### Plot en fonction du diamètre
+
+```{r, echo=TRUE}
 for (variety in c('Amiggo','Biggben','Hyperion','Juno','Swingg','Vegga')) {
   print(
     subset(sims,sim==variety) %>%
@@ -71,18 +106,31 @@ for (variety in c('Amiggo','Biggben','Hyperion','Juno','Swingg','Vegga')) {
       labs(title=variety)
     )
 }
+```
 
-### En fonction de l'âge
+### ExportType = 2 , .RSML
+
+#### Plot en fonction de l'age
+
+```{r, echo=TRUE}
 archiDART::archidraw(inputrsml = 'ArchiSimple/src/archisimple93/', rsml.date="age", coldate=rainbow(15), lwd=2, twod=c("x", "y"), asp=1, las=1, bty="l")
 
-## Chiffre
+```
 
+#### Chiffre
+
+La fonction archiDART::root donne les attributs de chaque racine.
+
+```{r, echo=TRUE}
 t <- archiDART::rsmlToTable('ArchiSimple/src/archisimple93/')
 archiDART::root(t)
+```
 
+# Maize
 
-# Le maïs ----------------------------------------------------------------------
+##Paramètre
 
+```{r, echo=TRUE}
 params_maize <- data.frame(
   ageAdv = 7,
   CVDD = 0.3,
@@ -112,5 +160,10 @@ params_maize <- data.frame(
   TrInt = 0.01,
   TrT = 1 
 )
+```
 
+## Run le modèle
 
+```{r, echo=TRUE}
+
+```
