--- a/modelisation.Rmd
+++ b/modelisation.Rmd
@@ -117,7 +117,7 @@ for (variety in levels(sims$sim)) {
 ## Run le modèle .RSML
 
 ```{r, echo=TRUE}
-ArchiSimple(par=par_sorgho,exporttype = 2,time = 40)
+ArchiSimple(par=par_sorgho,exporttype = 2,time = 30)
 ```
 
 ### Résultats de la modélisation
@@ -133,7 +133,7 @@ archiDART::archidraw(inputrsml = 'ArchiSimple/src/archisimple93/', rsml.date="ag
 
 La fonction archiDART::root donne les attributs de chaque racine.
 
-```{r, echo=TRUE}
+```{r eval=FALSE, include=FALSE}
 roots <- archiDART::rsmlToTable('ArchiSimple/src/archisimple93/')
 r <- archiDART::root(roots)
 ```
@@ -148,9 +148,9 @@ params_maize <- data.frame(
   CVDD = 0.3,
   dAdv = 1,
   distAdv = 20,
-  dmax = ,
+  dmax = 4,
   dmin = 0.14,
-  dSem = 1,
+  dSem = 0.2,
   EL =  51,
   erAdv = 0.8,
   erSem =  0.5,
@@ -177,7 +177,7 @@ params_maize <- data.frame(
 ## Run le modèle .txt
 
 ```{r, echo=TRUE}
-ArchiSimple(par=par_sorgho,exporttype = 1,time = 40)
+ArchiSimple(par=params_maize,exporttype = 1,time = 30)
 ```
 
 ### Résultats de la modélisation
