--- a/modelisation.Rmd
+++ b/modelisation.Rmd
@@ -205,12 +205,67 @@ maize %>%
 
 Le plot et l'importation des données est déjà fait avant.
 
-```{r, echo=TRUE}
- 
-```
+
+# Generic monocot
+## Choix des valeurs de paramètre
 
 ```{r, echo=TRUE}
- 
+params_mono <- data.frame(
+  ageAdv = 100,
+  CVDD = 0.22,
+  dAdv = 5,
+  distAdv = 20,
+  dmax = 1,
+  dmin = 0.14,
+  dSem = 1,
+  EL =  35,
+  erAdv = 0.8,
+  erSem =  0.5,
+  exportName = 'mono' ,
+  exportType = 1,
+  GDs = 100,
+  IPD =  2.5,
+  LDC =  1000,
+  maxAdv = 40,
+  maxSem =  35,
+  pdmax =  0.8,
+  pdmin =  0,
+  PDT = 4.5,
+  RDM =  0.11,
+  SGC =  0,
+  sim_length = 20,
+  simtime =  20,
+  TMD =  0.1,
+  TrInt = 0.002,
+  TrT = 1 
+)
+```
+
+## Run le modèle .txt
+
+```{r, echo=TRUE}
+ArchiSimple(par=params_mono,exporttype = 1,time = 30)
+```
+
+### Résultats de la modélisation
+
+```{r, echo=TRUE}
+setwd("ArchiSimple/src/archisimple93/")
+mono <- fread('mono.txt') %>%
+  mutate(sim='mono')
+setwd("../../../") 
+```
+
+#### Plot en fonction du diamètre
+
+```{r, echo=TRUE}
+mono %>%
+      ggplot() +
+      theme_classic() +
+      geom_segment(aes(x = X1, y = -Z1, xend = X2, yend = -Z2, color=Diam), alpha=0.9) +
+      scale_color_gradient(low = "blue", high = "red") +
+      coord_fixed()+
+      labs(title='Generic Monocot')
 ```
 
 ```{r, echo=TRUE}
