--- a/modelisation.Rmd
+++ b/modelisation.Rmd
@@ -115,6 +115,8 @@ for (variety in levels(sims$sim)) {
       coord_fixed()+
       labs(title=variety,col='Diamètre')
     )
+  print(paste('La profondeur max du système racinaire=',max(subset(sims,sim==variety)$Z1),'[mm]'))
+  print(paste0('Le système racinaire s étend de',min(subset(sims,sim==variety)$X1),'[mm] à ',max(subset(sims,sim==variety)$X1),'[mm] soit une largeur totale de :', max(subset(sims,sim==variety)$X1)-min(subset(sims,sim==variety)$X1),'[mm]'))
 }
 ```
 
@@ -179,13 +181,15 @@ maize %>%
       scale_color_gradient(low = "blue", high = "red") +
       coord_fixed()+
       labs(title='Maize')
+print(paste('La profondeur max du système racinaire=',max(maize$Z1),'[mm]'))
+print(paste0('Le système racinaire s étend de',min(maize$X1),'[mm] à ',max(maize$X1),'[mm] soit une largeur totale de :', max(maize$X1)-min(maize$X1),'[mm]'))
 ```
 
 ### Plot en fonction de l'age
 
 Le plot et l'importation des données est déjà fait avant.
 
-# Run les modèle .RSML
+# Run les modèle .RSML sorgho et maïs
 
 ```{r, echo=TRUE}
 ArchiSimple(par=par_sorgho,exporttype = 2,time = 40)
